done slider and fixed overflow

--- a/frontend/src/views/Home/Genre/GamesSlider/GamesSlider.scss
+++ b/frontend/src/views/Home/Genre/GamesSlider/GamesSlider.scss
@@ -99,14 +99,13 @@
     align-items: center;
     height: 250px;
     overflow: hidden;
-    width: 60vw;
+    width: 40vw;
     @media (max-width: 1439px) {
       width: 100vw;
       
     }
     .carousel__item {
       position: absolute;
-      width: 100%;
       transition: transform 0.8s ease, left 0.8s, opacity 0.9s ease, z-index 0s ease;
       &--hideLeft {
         z-index: 3;
